--- a/custom_components/melitta_coffee/services.yaml
+++ b/custom_components/melitta_coffee/services.yaml
@@ -13,24 +13,40 @@ brew_coffee:
       name: Drankje
       description: Het type drankje om te zetten
       required: false
-      default: coffee
+      default: espresso
       selector:
         select:
           options:
             - label: Espresso
               value: espresso
-            - label: Koffie
-              value: coffee
-            - label: Cappuccino
-              value: cappuccino
-            - label: Latte Macchiato
-              value: latte_macchiato
+            - label: Ristretto
+              value: ristretto
             - label: Lungo
               value: lungo
+            - label: Dubbele Espresso
+              value: espresso_doppio
+            - label: "Caf\u00e9 Cr\u00e8me"
+              value: cafe_creme
+            - label: Cappuccino
+              value: cappuccino
+            - label: "Caff\u00e8 Latte"
+              value: caffe_latte
+            - label: Latte Macchiato
+              value: latte_macchiato
+            - label: Flat White
+              value: flat_white
+            - label: Americano
+              value: americano
+            - label: Espresso Macchiato
+              value: espresso_macchiato
+            - label: "Caf\u00e9 au Lait"
+              value: cafe_au_lait
+            - label: Warme Melk
+              value: milk
+            - label: Melkschuim
+              value: milk_froth
             - label: Heet Water
               value: hot_water
-            - label: Stoom
-              value: steam
     strength:
       name: Sterkte
       description: De sterkte van de koffie
@@ -39,6 +55,8 @@ brew_coffee:
       selector:
         select:
           options:
+            - label: Heel Mild
+              value: very_mild
             - label: Mild
               value: mild
             - label: Normaal
@@ -46,7 +64,7 @@ brew_coffee:
             - label: Sterk
               value: strong
             - label: Extra Sterk
-              value: extra_strong
+              value: very_strong
     cups:
       name: Kopjes
       description: Aantal kopjes
