--- a/custom_components/melitta_coffee/manifest.json
+++ b/custom_components/melitta_coffee/manifest.json
@@ -11,6 +11,9 @@
   "version": "1.0.0",
   "bluetooth": [
     {
+      "service_uuid": "0000ad01-b35c-11e4-9813-0002a5d5c51b"
+    },
+    {
       "local_name": "Melitta*"
     },
     {
