--- a/custom_components/melitta_coffee/manifest.json
+++ b/custom_components/melitta_coffee/manifest.json
@@ -24,6 +24,24 @@
     },
     {
       "local_name": "Caffeo*"
+    },
+    {
+      "local_name": "8301*"
+    },
+    {
+      "local_name": "8311*"
+    },
+    {
+      "local_name": "8401*"
+    },
+    {
+      "local_name": "8501*"
+    },
+    {
+      "local_name": "8601*"
+    },
+    {
+      "local_name": "8604*"
     }
   ]
 }
