--- a/custom_components/melitta_coffee/manifest.json
+++ b/custom_components/melitta_coffee/manifest.json
@@ -6,25 +6,9 @@
   "dependencies": ["bluetooth"],
   "documentation": "https://github.com/jahhoor/Melitta-",
   "integration_type": "device",
-  "iot_class": "local_polling",
-  "requirements": [],
-  "version": "1.0.0",
+  "iot_class": "local_push",
+  "requirements": ["bleak>=0.21.0", "cryptography>=41.0.0"],
   "bluetooth": [
-    {
-      "service_uuid": "0000ad01-b35c-11e4-9813-0002a5d5c51b"
-    },
-    {
-      "local_name": "Melitta*"
-    },
-    {
-      "local_name": "CAFFEO*"
-    },
-    {
-      "local_name": "Barista*"
-    },
-    {
-      "local_name": "Caffeo*"
-    },
     {
       "local_name": "8301*"
     },
@@ -43,5 +27,6 @@
     {
       "local_name": "8604*"
     }
-  ]
+  ],
+  "version": "2.0.0"
 }
